# hand-written-compiler

./: .gitignore  CMakeLists.txt  README.md  UnitTest.cpp  UnitTest.h  cppcheck.sh  graphviz.sh  main.cpp  suppressions.txt
BadSamples/: TC_2a.java
Samples/: Factorial.java  Test.java
abstr/: CDriver.cpp  CDriver.h  CScanner.h  Exceptions.h  LineHandler.h  Location.cpp  Location.h  StringInterner.cpp  StringInterner.h  Symbol.h  bad_test  lexer.l  parser.yy  test
abstr/tree/: Class.h  Common.h  Expression.h  INode.h  MethodDeclaration.h  Program.cpp  Program.h  Statement.h  Type.h  VarDeclaration.cpp  VarDeclaration.h
abstr/tree/visitors/: GraphVizPrinterVisitor.h  IVisitor.h
code_generation/: Instructions.h
code_generation/X86/: InstructionSet.cpp  InstructionSet.h  X86CodeGeneration.cpp  X86CodeGeneration.h
irt/: Accept.cpp  CommonDefs.h  DotPrinter.cpp  DotPrinter.h  IIRMutableVisitor.h  IIRVisitor.h  INode.h  ISubtreeWrapper.h  Label.cpp  Label.h  List.h  NodeTypes.h  common.h
irt/activation_records/: ArrayStruct.cpp  ArrayStruct.h  ClassStruct.h  IAccess.h  IFrame.h  InFrameAccess.cpp  InFrameAccess.h  InRegAccess.cpp  InRegAccess.h
irt/activation_records/X86/: X86MiniJavaClassStruct.cpp  X86MiniJavaClassStruct.h  X86MiniJavaFrame.cpp  X86MiniJavaFrame.h
irt/expressions/: Binop.h  Call.h  Const.h  ESeq.h  IExp.h  Mem.h  Name.h  Temp.cpp  Temp.h  Unop.h
irt/statements/: CJump.h  Exp.h  IStm.h  Jump.h  Label.h  Move.h  Seq.h
irt/translator/: Canoniser.cpp  Canoniser.h  ExprWrapper.h  IRBuilderVisitor.cpp  IRBuilderVisitor.h  IRPrettyPrinter.cpp  IRPrettyPrinter.h  NameConventions.h  StmWrapper.h  X86IRBuilder.cpp  X86IRBuilder.h
lexer/: CDriver.cpp  CDriver.h  CScanner.h  LineHandler.cpp  Symbol.cpp  Symbol.h  lexer.l  parser.yy  run.sh  test
lexer/tree/: Class.cpp  Class.h  Common.h  Expression.cpp  Expression.h  INode.h  MethodDeclaration.cpp  MethodDeclaration.h  Program.h  Statement.cpp  Statement.h  Type.h  VarDeclaration.cpp  VarDeclaration.h
lexer/tree/visitors/: GraphVizPrinterVisitor.cpp  GraphVizPrinterVisitor.h  IVisitor.h
table_of_symbols/: ClassInfo.cpp  ClassInfo.h  Common.h  Exceptions.h  IdentifierInfo.h  MethodInfo.cpp  MethodInfo.h  ScopeSwitcher.cpp  ScopeSwitcher.h  SymbolTable.cpp  SymbolTable.h  SymbolTableBuilder.cpp  SymbolTableBuilder.h  SymbolTableCreatorVisitor.cpp  SymbolTableCreatorVisitor.h  TypeInfo.cpp  TypeInfo.h  VariableInfo.cpp  VariableInfo.h
type_checker/: DependencyChecker.cpp  DependencyChecker.h  Exceptions.h  TypeCheckerVisitor.cpp  TypeCheckerVisitor.h
